--- a/arch/nios2/Kconfig
+++ b/arch/nios2/Kconfig
@@ -40,11 +40,17 @@ config GENERIC_CALIBRATE_DELAY
 	bool
 	default y
 
+config HOTPLUG_CPU
+	bool
+	default n
+
 source "init/Kconfig"
 
 menu "Processor type and features"
 
 comment 'Platform dependant setup'
+
+source "kernel/time/Kconfig"
 
 choice
 	prompt "CPU"
@@ -232,23 +238,9 @@ config RAMKERNEL
 
 endchoice
 
-config PREEMPT
-	bool "Preemptible Kernel"
-	help
-	  This option reduces the latency of the kernel when reacting to
-	  real-time or interactive events by allowing a low priority process to
-	  be preempted even if it is in kernel mode executing a system call.
-	  This allows applications to run more reliably even when the system is
-	  under load.
+source "kernel/Kconfig.preempt"
 
-	  Say Y here if you are building a kernel for a desktop, embedded
-	  or real-time system.  Say N if you are unsure.
-
-config PREEMPT_TIMES
-	bool "Collect preemption latency times"
-	depends on PREEMPT
-	help
-	  Allow collection for preemption latency times.
+source kernel/Kconfig.hz
 
 config CMDLINE
 	string "Default kernel command string"
@@ -272,7 +264,7 @@ source "mm/Kconfig"
 
 config BOOT_LINK_OFFSET
 	hex "Link address offset for booting"
-	default "0x00800000"
+	default "0x00500000"
 	help
 	  This option allows you to set the link address offset of the zImage.
 	  This can be useful if you are on a board which has a small amount of
@@ -291,7 +283,7 @@ source "drivers/pci/Kconfig"
 
 config HOTPLUG
 	bool "Support for hot-pluggable device"
-	  ---help---
+	  help
 	  Say Y here if you want to plug devices into your computer while
 	  the system is running, and be able to use them quickly.  In many
 	  cases, the devices can likewise be unplugged at any time too.
@@ -315,27 +307,15 @@ endmenu
 
 menu "Executable file formats"
 
-config KCORE_AOUT
-	bool
-	default y
-
-config KCORE_ELF
-	bool
-	default y
-
 source "fs/Kconfig.binfmt"
 
 endmenu
 
 menu "Power management options"
 
-config PM
-	bool "Power Management support"
-	help
-	  Support processor power management modes
+source "kernel/power/Kconfig"
 
 endmenu
-
 
 source "net/Kconfig"
 
@@ -344,57 +324,6 @@ source "drivers/Kconfig"
 source "fs/Kconfig"
 
 source "arch/nios2/Kconfig.debug"
-
-menu "Kernel hacking"
-
-config FULLDEBUG
-	bool "Full Symbolic/Source Debugging support"
-	help
-	  Enable debuging symbols on kernel build.
-
-config FRAME_POINTER
-	bool "Compile the kernel with frame pointers"
-	help
-	  If you say Y here the resulting kernel image will be slightly larger
-	  and slower, but it will give very useful debugging information.
-	  If you don't debug the kernel, you can say N, but we may not be able
-	  to solve problems without frame pointers.
-
-config MAGIC_SYSRQ
-	bool "Magic SysRq key"
-	help
-	  Enables console device to interpret special characters as
-	  commands to dump state information.
-
-config HIGHPROFILE
-	bool "Use fast second timer for profiling"
-	depends on COLDFIRE
-	help
-	  Use a fast secondary clock to produce profiling information.
-
-config NO_KERNEL_MSG
-	bool "Suppress Kernel BUG Messages"
-	help
-	  Do not output any debug BUG messages within the kernel.
-
-config LOG_BUF_SHIFT
-	int "Kernel log buffer size (16 => 64KB, 17 => 128KB)" if DEBUG_KERNEL
-	range 12 21
-	default 17 if ARCH_S390
-	default 16 if X86_NUMAQ || IA64
-	default 15 if SMP
-	default 14
-	help
-	  Select kernel log buffer size as a power of 2.
-	  Defaults and Examples:
-	  	     17 => 128 KB for S/390
-		     16 => 64 KB for x86 NUMAQ or IA-64
-	             15 => 32 KB for SMP
-	             14 => 16 KB for uniprocessor
-		     13 =>  8 KB
-		     12 =>  4 KB
-
-endmenu
 
 source "security/Kconfig"
 
