nios2: allow allocating memory blocks up to 32MB
The previous CONFIG_LARGE_ALLOCS flag was replaced by the new
CONFIG_FORCE_MAX_ZONEORDER flag to override the default in mmzone.h,
which is 4MB.

Signed-off-by: Thomas Chou <thomas@wytron.com.tw>

--- a/arch/nios2/Kconfig
+++ b/arch/nios2/Kconfig
@@ -208,13 +208,9 @@ config BREAK_ON_START
 	  before the kernel starts initialization. This allows you to
 	  debug the kernel startup.
 
-config LARGE_ALLOCS
-	bool "Allow allocating large blocks (> 1MB) of memory"
-	help
-	  Allow the slab memory allocator to keep chains for very large
-	  memory sizes - upto 32MB. You may need this if your system has
-	  a lot of RAM, and you need to able to allocate very large
-	  contiguous chunks. If unsure, say N.
+config FORCE_MAX_ZONEORDER
+	int
+	default "14" 
 
 choice
 	prompt "Kernel executes from"
