nios2: fix arch prepare
The prepare in arch Makefile should be spelled as archprepare. This
fixes the compilation error caused by asm-offsets.h dependency.

Signed-off-by: Thomas Chou <thomas@wytron.com.tw>

--- a/arch/nios2/Makefile
+++ b/arch/nios2/Makefile
@@ -142,7 +142,7 @@ hwselect:
 	@echo $($(quiet)cmd_gen_mk);
 	@$(cmd_gen_mk)	
 	
-prepare: include/nios2_system.h
+archprepare: include/nios2_system.h
 
 archclean:
 	@$(MAKE) $(clean)=arch/$(ARCH)/boot
