nios2: enable 'make AFLAGS=...' to add additional options to AS
Follow the patch from Sam Ravnborg <sam@ravnborg.org>,

The variable AFLAGS is a wellknown variable and the usage by
kbuild may result in unexpected behaviour.
On top of that several people over time has asked for a way to
pass in additional flags to gcc.

This patch replace use of AFLAGS with KBUILD_AFLAGS all over
the tree.

Signed-off-by: Thomas Chou <thomas@wytron.com.tw>

--- a/arch/nios2/Makefile
+++ b/arch/nios2/Makefile
@@ -73,8 +73,8 @@ KBUILD_CFLAGS += -DUTS_SYSNAME=\"uClinux\"
 CFLAGS_GCC_INC := $(shell $(CC) -print-file-name=include)
 KBUILD_CFLAGS += -I$(CFLAGS_GCC_INC)
 
-AFLAGS += -DNO_MM -g
-#AFLAGS += -DNO_MM -g -save-temps
+KBUILD_AFLAGS += -DNO_MM -g
+#KBUILD_AFLAGS += -DNO_MM -g -save-temps
 
 # vic - add this to get name of nios gcc library
 LIBGCC_CFLAGS = $(if $(CONFIG_NIOS2_HW_MUL_OFF),-mno-hw-mul)
