nios_mmc: Merged in changes from nios_mmc branch. Works with 1.0 of nios_mmc core
Signed-off-by: Jai Dhar <jai.dhar@gmail.com>

--- a/arch/nios2/drivers/Kconfig
+++ b/arch/nios2/drivers/Kconfig
@@ -43,3 +43,9 @@ config NIOS_SPI
 	help
 	  This driver supports the Nios softcore SPI device.
 
+config NIOS_SD_HOST
+	tristate "NIOS SD/SDIO/MMC Host"
+	depends on NIOS || NIOS2
+	help
+		This driver supports the FPS-Tech SD/SDIO/MMC Host IP
+
