--- a/arch/nios2/Kconfig
+++ b/arch/nios2/Kconfig
@@ -48,6 +48,9 @@ config HOTPLUG_CPU
 	bool
 	default n
 
+config ARCH_SUPPORTS_AOUT
+	def_bool y
+
 source "init/Kconfig"
 
 menu "Processor type and features"
