--- a/arch/nios2/Kconfig
+++ b/arch/nios2/Kconfig
@@ -44,6 +44,10 @@ config GENERIC_CALIBRATE_DELAY
 	bool
 	default y
 
+config GENERIC_TIME
+	bool
+	default y
+
 config HOTPLUG_CPU
 	bool
 	default n
