--- a/arch/nios2/kernel/Makefile
+++ b/arch/nios2/kernel/Makefile
@@ -11,7 +11,7 @@ extra-y := head.o init_task.o vmlinux.lds
 
 obj-y   := entry.o traps.o irq.o syscalltable.o \
 	    process.o signal.o setup.o sys_nios2.o \
-	    semaphore.o io.o usb.o\
+	    io.o usb.o\
 	    time.o ptrace.o nios2_ksyms.o
 
 obj-$(CONFIG_MODULES) += module.o
