--- a/arch/nios2/boards/Kconfig
+++ b/arch/nios2/boards/Kconfig
@@ -13,9 +13,18 @@ config NEEK
 	help
 	  The Altera Nios Embedded Evaluation Kit support.
 
+config NIOS2_GENERIC_DTS
+	bool "Generic devicetree based NiosII system"
+	select OF
+	help
+	  Select this to have a flexible system with only the bare essentials
+	  compiled into the kernel and the rest all supplied by a device-tree.
+	  You can select a default dts file or suply your own.
+
 endchoice
 
 source "arch/nios2/boards/3c120/Kconfig"
 source "arch/nios2/boards/neek/Kconfig"
+source "arch/nios2/boards/generic-dts/Kconfig"
 
 endmenu
