nios2: add linked dtb
"Devicetree source file" points to the dts file, which will be
dtc compiled and linked into kernel.

The priority of dtb usage is,
1. fdt passed from u-boot
2. DTB at physical address
3. Devicetree source file

Also cleanup and tabify prom.c.

FIXME: dtb should be regenerated when the file path changed.

Signed-off-by: Thomas Chou <thomas@wytron.com.tw>

--- a/arch/nios2/Kconfig
+++ b/arch/nios2/Kconfig
@@ -105,6 +105,14 @@ config DTC
 	bool
 	depends on OF
 
+config DTB_SOURCE
+	string "Devicetree source file"
+	depends on OF
+	default ""
+	help
+	  This is the dts file which will be compiled and linked into
+	  kernel.
+
 config ALIGNMENT_TRAP
 	bool "Catch alignment trap"
 	default y
