--- a/drivers/spi/Kconfig
+++ b/drivers/spi/Kconfig
@@ -237,7 +237,7 @@ config SPI_FSL_ESPI
 	  From MPC8536, 85xx platform uses the controller, and all P10xx,
 	  P20xx, P30xx,P40xx, P50xx uses this controller.
 
-config SPI_OC_TINY_SPI
+config SPI_OC_TINY
 	tristate "OpenCores tiny SPI"
 	select SPI_BITBANG
 	help
