--- a/arch/nios2/Kconfig
+++ b/arch/nios2/Kconfig
@@ -2,6 +2,7 @@ config NIOS2
 	def_bool y
 	select HAVE_OPROFILE
 	select USB_ARCH_HAS_HCD if USB_SUPPORT
+	select ARCH_WANT_OPTIONAL_GPIOLIB
 
 config GENERIC_CSUM
 	def_bool y
@@ -13,6 +14,9 @@ config GENERIC_HWEIGHT
 	def_bool y
 
 config GENERIC_CALIBRATE_DELAY
+	def_bool y
+
+config GENERIC_GPIO
 	def_bool y
 
 config GENERIC_HARDIRQS
