watchdog: Add altera_wdt watchdog driver
This driver adds support for the Altera Timer in the Watchdog Timer
configuration. It replaces (or was renamed from) the avalonwdt.c by
Walter Goossens and implements a software timer on top of it (as
suggested by Jamie Iles.

Signed-off-by: Tobias Klauser <klto@zhaw.ch>

--- a/drivers/watchdog/Kconfig
+++ b/drivers/watchdog/Kconfig
@@ -974,6 +974,12 @@ config BCM63XX_WDT
 
 # NIOS2 Architecture
 
+config ALTERA_WDT
+	tristate "Altera Watchdog Timer"
+	help
+	  Watchdog driver for the Altera Watchdog Timer found on Altera
+	  Nios2 SOPC systems.
+
 # PARISC Architecture
 
 # POWERPC Architecture
