nios2: Remove mm/mmdump.c
The functions therein are referenced nowhere.

Signed-off-by: Tobias Klauser <klto@zhaw.ch>

--- a/arch/nios2/mm/Makefile
+++ b/arch/nios2/mm/Makefile
@@ -7,4 +7,4 @@ obj-y := init.o
 obj-y += cacheflush$(MMU).o
 
 obj-$(CONFIG_MMU) += pgtable.o tlb.o uaccess.o fault.o ioremap.o
-obj-$(CONFIG_MMU) += extable.o mmu_context.o mmdump.o dma-mapping.o
+obj-$(CONFIG_MMU) += extable.o mmu_context.o dma-mapping.o
